--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -18,7 +18,7 @@
             tools:text="Name note"
             android:textColor="@color/design_default_color_primary_dark"
             android:textStyle="bold"
-            android:textSize="@dimen/item_note_name"
+            android:textSize="@dimen/app_large_name"
             android:layout_margin="@dimen/app_margin"
             android:gravity="center"
             android:lines="1"
@@ -34,7 +34,6 @@
             android:layout_margin="@dimen/app_margin"
             tools:text="Note text"
             android:textColor="@color/design_default_color_primary"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/item_note_name"
