--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,6 +6,30 @@
     app:startDestination="@id/startFragment">
 
     <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.notes.olshanov.screens.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_startFragment"
+            app:destination="@id/startFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_addNewNoteFragment"
+            app:destination="@id/addNewNoteFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_noteFragment"
+            app:destination="@id/noteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addNewNoteFragment"
+        android:name="com.example.notes.olshanov.screens.add_new_note.AddNewNoteFragment"
+        android:label="fragment_add_new_note"
+        tools:layout="@layout/fragment_add_new_note" >
+        <action
+            android:id="@+id/action_addNewNoteFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/startFragment"
         android:name="com.example.notes.olshanov.screens.start.StartFragment"
         android:label="fragment_start"
@@ -15,36 +39,12 @@
             app:destination="@id/mainFragment" />
     </fragment>
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.example.notes.olshanov.screens.main.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_startFragment"
-            app:destination="@id/startFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_noteFragment"
-            app:destination="@id/noteFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_addNewNoteFragment"
-            app:destination="@id/addNewNoteFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/noteFragment"
-        android:name="com.example.notes.olshanov.screens.NoteFragment"
+        android:name="com.example.notes.olshanov.note.NoteFragment"
         android:label="fragment_note"
         tools:layout="@layout/fragment_note" >
         <action
             android:id="@+id/action_noteFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/addNewNoteFragment"
-        android:name="com.example.notes.olshanov.screens.add_new_note.AddNewNoteFragment"
-        android:label="fragment_add_new_note"
-        tools:layout="@layout/fragment_add_new_note" >
-        <action
-            android:id="@+id/action_addNewNoteFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
